# AHKgen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
integration/: ahk-v1.integration.js  ahk-v2.integration.js
scripts/: bump-version.cjs  bump.cjs
src/: index.html  main.js  styles.css  theme-bootstrap.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ahk/: constants.js  escaping.js  generator.js  import.js  parser.js  versions.js
src/config/: user-config.js
src/hotkeys/: controller.js
src/hotstrings/: controller.js  duplicates.js
src/i18n/: de.json  en.json  es.json  fr.json  index.js  it.json  pl.json  pt.json
src/input/: capture.js
src/keyboard/: layouts.js  prefixes.js  visual-layout.js
src/remaps/: controller.js  visual-state.js
src/ui/: ahk-version.js  auto-resize-textarea.js  entry-list.js  html.js  language-picker.js  modes.js  mouse-only-interaction.js  script-workspace.js  status-message.js  theme.js  titlebar.js  visual-input.js
test/: accessibility-markup.test.js  ahk-version.test.js  ahk.test.js  auto-resize-textarea.test.js  hotstring-duplicates.test.js  html.test.js  i18n.test.js  import.test.js  input-capture.test.js  keyboard-prefixes.test.js  language-picker.test.js  modes.test.js  mouse-only-interaction.test.js  remap-visual-state.test.js  script-workspace.test.js  status-message.test.js  tauri-capabilities.test.js  theme.test.js  user-config.test.js  visual-input.test.js
