[package]
name = "AHKforge"
version = "1.0.0-rc.0"
description = "Simple script generator for AutoHotkey v1 and v2"
authors = ["Aleksander Łysoń"]
license = "MIT"
homepage = "https://github.com/insmnaxd/AHKforge"
repository = "https://github.com/insmnaxd/AHKforge.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ahkforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

# Temporary upstream security patch. Remove this override after a
# wayland-scanner release containing quick-xml >= 0.41 is published.
[patch.crates-io]
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs", rev = "d07c4f91f28b42e5a485823ffd9d8d5a210b1053" }
